--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/react-dom": "^18.2.17",
     "clsx": "^2.0.0",
     "firebase": "^10.6.0",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.0.0",
