--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
